maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:21: error: wrong number of type arguments for Tuple2, should be 2
def marquerSol(casee: Tuple2[Int], numero:Int) {
                      ^